--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,24 +1,24 @@
-# Simple workflow to deploy a static HTML file from an external repository to GitHub Pages
+# .github/workflows/deploy-pages.yml
 
-name: Deploy External HTML to Pages
+# Name of the workflow
+name: Deploy BitEdit to GitHub Pages
 
 # Controls when the workflow will run
 on:
-  # Runs on pushes to the main branch
+  # Triggers the workflow on push events but only for the "main" branch
   push:
     branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
+# Sets the permissions for the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+# Allow only one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -28,18 +28,37 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Create Artifact Directory
-        run: mkdir -p ./_site
-
-      - name: Download external index.html
-        # Fetches the raw HTML file from the specified URL and saves it in the artifact directory
-        run: curl -o ./_site/index.html -L "https://raw.githubusercontent.com/S0methingSomething/BitEdit/main/BitEdit/index.html"
-
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
-
+        
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload the directory containing our downloaded index.html
+          # This path is now corrected to point to your "BitEdit" folder
+          path: './BitEdit' # <--- THIS IS THE REQUIRED CHANGE
+
+  # Deployment job
+  deploy:
+    # Requires the build job to have completed successfully
+    needs: build
+    
+    # Grant GITHUB_TOKEN the permissions required to deploy to Pages
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    # Specify runner + deployment step
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
