--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -18,34 +18,58 @@ permissions:
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment
+# Allow only one concurrent deployment, canceling any in-progress runs
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
-  # Build job
+  # Build and Test job
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install HTML Validator
+        run: npm install -g html-validator-cli
+
+      - name: Validate HTML
+        run: html-validator --path ./BitEdit --verbose
+
+      - name: Install and run a local server for testing
+        run: |
+          npm install -g http-server
+          http-server ./BitEdit &
+          sleep 5 # Give the server a moment to start
+
+      - name: Test if the site is renderable with cURL
+        run: curl -s -o /dev/null -w "%{http_code}" http://127.0.0.1:8080 | grep 200
+
+      - name: Check for broken links
+        uses: ahmadnassri/action-broken-link-checker@v1.0.1
+        with:
+          path: ./BitEdit
+
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
-        
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # This path is now corrected to point to your "BitEdit" folder
-          path: './BitEdit' # <--- THIS IS THE REQUIRED CHANGE
+          path: './BitEdit'
 
   # Deployment job
   deploy:
     # Requires the build job to have completed successfully
     needs: build
-    
+
     # Grant GITHUB_TOKEN the permissions required to deploy to Pages
     permissions:
       pages: write      # to deploy to Pages
