--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -51,10 +51,11 @@ jobs:
       - name: Test if the site is renderable with cURL
         run: curl -s -o /dev/null -w "%{http_code}" http://127.0.0.1:8080 | grep 200
 
-      - name: Check for broken links
-        uses: ahmadnassri/action-broken-link-checker@v1.0.1
+      - name: Check for broken links # <-- THIS STEP IS REPLACED
+        uses: lycheeverse/lychee-action@v1.10.0 # Using a well-maintained action
         with:
-          path: ./BitEdit
+          # This scans all HTML files recursively in the BitEdit directory
+          args: --verbose --no-progress './BitEdit/**/*.html'
 
       - name: Setup Pages
         id: pages
@@ -86,3 +87,4 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
