--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,10 +1,10 @@
-name: Deploy BitEdit and Update Version File
+name: Deploy BitEdit and Update Version Files
 
 on:
   push:
     branches: ["main"]
     paths:
-      - 'BitEdit/index.html' # More specific path for the versioned index.html
+      - 'BitEdit/index.html' # Triggers on changes to the versioned index.html
   workflow_dispatch:
 
 permissions:
@@ -36,9 +36,6 @@ jobs:
             exit 1
           fi
           VERSION_LINE=$(grep 'GITHUB_ACTION_MARKER_APP_VERSION' -A 1 "$INDEX_FILE_PATH" | tail -n1)
-          
-          # Robust sed command to extract content between quotes after "CURRENT_APP_VERSION = "
-          # Allows for spaces around '=' and captures anything within the quotes.
           VERSION_STRING=$(echo "$VERSION_LINE" | sed -n 's/.*CURRENT_APP_VERSION[[:space:]]*=[[:space:]]*"\([^"]*\)".*/\1/p')
           
           if [ -z "$VERSION_STRING" ]; then
@@ -47,13 +44,21 @@ jobs:
             echo "Line processed by sed: $VERSION_LINE"
             exit 1
           fi
-          echo "Extracted version: $VERSION_STRING"
-          echo "version=$VERSION_STRING" >> "$GITHUB_OUTPUT"
+          echo "Extracted version (original): $VERSION_STRING"
+          echo "version_original=$VERSION_STRING" >> "$GITHUB_OUTPUT"
+
+      - name: Normalize version string for CACHE_NAME
+        id: normalize_version
+        run: |
+          RAW_VERSION="${{ steps.get_version.outputs.version_original }}"
+          NORMALIZED_VERSION=$(echo "$RAW_VERSION" | sed 's/^v//') # Remove leading 'v'
+          echo "Normalized version for CACHE_NAME: $NORMALIZED_VERSION"
+          echo "value=$NORMALIZED_VERSION" >> "$GITHUB_OUTPUT"
 
       - name: Create/Update BitEdit_version.txt locally
-        id: update_txt
+        id: update_version_txt
         run: |
-          VERSION_TO_WRITE="${{ steps.get_version.outputs.version }}"
+          VERSION_TO_WRITE="${{ steps.get_version.outputs.version_original }}" # Use original version for this file
           VERSION_FILE_PATH="BitEdit/BitEdit_version.txt" 
           
           mkdir -p "$(dirname "$VERSION_FILE_PATH")"
@@ -64,13 +69,45 @@ jobs:
           fi
 
           if [ "$CURRENT_CONTENT" != "$VERSION_TO_WRITE" ]; then
-            echo "Version changed. Writing '$VERSION_TO_WRITE' to '$VERSION_FILE_PATH'"
+            echo "BitEdit_version.txt: Content changed. Writing '$VERSION_TO_WRITE'."
             echo "$VERSION_TO_WRITE" > "$VERSION_FILE_PATH"
             echo "changed=true" >> "$GITHUB_OUTPUT"
           else
             echo "BitEdit_version.txt is already up to date with '$VERSION_TO_WRITE'."
             echo "changed=false" >> "$GITHUB_OUTPUT"
           fi
+
+      - name: Update CACHE_NAME in sw.js locally
+        id: update_sw_js
+        run: |
+          NORMALIZED_VERSION="${{ steps.normalize_version.outputs.value }}" # e.g., "1.4.3"
+          SW_FILE_PATH="BitEdit/sw.js"
+          
+          if [ ! -f "$SW_FILE_PATH" ]; then
+            echo "Error: $SW_FILE_PATH not found."
+            exit 1
+          fi
+
+          # Store original content to check for changes
+          cp "$SW_FILE_PATH" "${SW_FILE_PATH}.orig"
+          
+          # This sed command finds the line after GITHUB_ACTION_MARKER_SW_CACHE_NAME
+          # and replaces the content of '...' in "const CACHE_NAME = '...';"
+          # It preserves the 'const CACHE_NAME = ' part and the ending '; // comment' part.
+          # Group 1: (const CACHE_NAME = *')
+          # Group 2: (';.*)  -> the semicolon and the rest of the line (comment)
+          # Replacement: \1${NORMALIZED_VERSION}\2 -> inserts the normalized version between the single quotes.
+          sed -E -i.bak "/\/\/ GITHUB_ACTION_MARKER_SW_CACHE_NAME/{n;s/(const CACHE_NAME = *')[^']*(' *;.*)/\1${NORMALIZED_VERSION}\2/;}" "$SW_FILE_PATH"
+          
+          # Check if the file was actually modified by sed
+          if ! cmp -s "${SW_FILE_PATH}.bak" "$SW_FILE_PATH"; then
+            echo "sw.js: CACHE_NAME updated to '${NORMALIZED_VERSION}'"
+            echo "changed=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "sw.js: CACHE_NAME already up to date or sed command did not modify the file."
+            echo "changed=false" >> "$GITHUB_OUTPUT"
+          fi
+          rm -f "${SW_FILE_PATH}.bak" # Clean up backup file
 
       - name: Setup Pages
         id: pages
@@ -79,18 +116,39 @@ jobs:
       - name: Upload artifact for deployment
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './BitEdit'
+          path: './BitEdit' # This directory now contains locally modified files
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
 
-      - name: Commit and push BitEdit_version.txt if changed
-        if: success() && steps.update_txt.outputs.changed == 'true'
+      - name: Commit and push changed version files
+        if: success() && (steps.update_version_txt.outputs.changed == 'true' || steps.update_sw_js.outputs.changed == 'true')
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add BitEdit/BitEdit_version.txt
-          git commit -m "docs: Update BitEdit_version.txt to ${{ steps.get_version.outputs.version }} [skip ci]"
+          
+          FILES_TO_COMMIT=""
+          COMMIT_MESSAGE_DETAILS=""
+
+          if [ "${{ steps.update_version_txt.outputs.changed }}" == "true" ]; then
+            git add BitEdit/BitEdit_version.txt
+            FILES_TO_COMMIT="BitEdit_version.txt"
+            COMMIT_MESSAGE_DETAILS="BitEdit_version.txt"
+          fi
+
+          if [ "${{ steps.update_sw_js.outputs.changed }}" == "true" ]; then
+            git add BitEdit/sw.js
+            if [ -n "$FILES_TO_COMMIT" ]; then
+              FILES_TO_COMMIT="$FILES_TO_COMMIT and BitEdit/sw.js"
+              COMMIT_MESSAGE_DETAILS="$COMMIT_MESSAGE_DETAILS, sw.js CACHE_NAME"
+            else
+              FILES_TO_COMMIT="BitEdit/sw.js"
+              COMMIT_MESSAGE_DETAILS="sw.js CACHE_NAME"
+            fi
+          fi
+          
+          echo "Committing changes to: $FILES_TO_COMMIT"
+          git commit -m "docs: Update $COMMIT_MESSAGE_DETAILS to ${{ steps.get_version.outputs.version_original }} [skip ci]"
           git push
-          echo "BitEdit_version.txt updated and pushed to repository."
+          echo "Version files updated and pushed to repository."
